<resources>
    <string name="app_name">HelloFoodie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Recipes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="toolbar_recipe_detail">Recipe Detail</string>
    <string name="welcome">Glad you\'re here. Let\'s get cooking!</string>
    <string name="search_recipe">search recipe</string>
    <string name="error_info">Something went wrong \n Please try it again later</string>
    <string name="empty_result">New recipes will be added soon.</string>
    <string name="recipe_summary">Summary</string>
    <string name="no_summary">No summary yet</string>
    <string name="ingredients">Ingredients</string>
    <string name="category">category</string>
    <string name="nothing_found">Nothing found</string>
    <plurals name="recipe_likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="recipe_ready_minutes_count">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="recipe_servings_count">
        <item quantity="one">%d serving</item>
        <item quantity="other">%d servings</item>
    </plurals>
</resources>