<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/popular_recipes_fragment">

    <fragment
        android:id="@+id/popular_recipes_fragment"
        android:name="com.example.hellofoodie.presentation.popularRecipes.PopularRecipesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_popular_recipes">

        <action
            android:id="@+id/action_popular_recipes_fragment_to_recipe_detail_fragment"
            app:destination="@id/recipe_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/recipe_detail_fragment"
        android:name="com.example.hellofoodie.presentation.recipeDetail.RecipeDetailFragment"
        android:label="@string/toolbar_recipe_detail"
        tools:layout="@layout/fragment_recipe_detail">
        <argument
            android:name="recipeId"
            app:argType="long"
            android:defaultValue="-1L"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.hellofoodie.presentation.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.hellofoodie.presentation.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>